--- a/index.html
+++ b/index.html
@@ -37,7 +37,120 @@
         </div>
     </header>
     <main>
-        <section class="section sec2 about" id="about"></section>
+        <section class="section sec2 about" id="about">
+            <div class="main-title">
+                <h2>About <span>me</span><span class="bg-text">my stats</span></h2>
+            </div>
+            <div class="about-container">
+                <div class="left-about">
+                    <h4>Information about me</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ac venenatis augue, ac mollis eros. Vivamus eu lorem rutrum, tristique nulla quis, sodales nulla. Vivamus tellus eros, cursus commodo consequat ac, ullamcorper et lectus. Aenean sit amet molestie lorem, quis condimentum ipsum. Aliquam porttitor et quam id ullamcorper. Donec luctus lacinia mi, ac ultrices mauris tincidunt sit amet. Nam dapibus pulvinar ullamcorper. Quisque consequat convallis dui. Curabitur neque leo, malesuada sit amet ullamcorper vitae, dignissim at velit. Vivamus elit massa, pellentesque sed sapien quis, porttitor bibendum mi. Aliquam a gravida magna. Aliquam velit tortor, consectetur sed arcu eget, tempor laoreet dui. Donec sodales enim dapibus purus lacinia, quis tincidunt massa placerat. Suspendisse varius a nulla eget dictum. Nulla interdum non orci ac congue. Proin porttitor convallis libero ac eleifend.
+                    </p>
+                    <div class="btn-container">
+                        <a href="" class="main-btn">
+                            <span class="btn-text">Download Resume</span>
+                            <span class="btn-icon"><i class="fas fa-download"></i></span>
+                        </a>
+                    </div>
+                </div>
+                <div class="right-about">
+                    <div class="about-item">
+                        <div class="about-text">
+                            <p class="large-text">3.5+</p>
+                            <p class="small-text"> years of experience</p>
+                        </div>
+                    </div>
+                    <div class="about-item">
+                        <div class="about-text">
+                            <p class="large-text">2</p>
+                            <p class="small-text"> companies served</p>
+                        </div>
+                    </div>
+                    <div class="about-item">
+                        <div class="about-text">
+                            <p class="large-text">3.5+</p>
+                            <p class="small-text"> years of experience</p>
+                        </div>
+                    </div>
+                    <div class="about-item">
+                        <div class="about-text">
+                            <p class="large-text">2</p>
+                            <p class="small-text"> companies served</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="about-stats">
+                <h4 class="stat-title">
+                    My Skills
+                </h4>
+                <div class="progress-bars">
+                    <div class="progress-bar">
+                        <p class="progress-title">
+                            Angular
+                        </p>
+                        <div class="progress-container">
+                            <p class="progress-text">80%</p>
+                            <div class="progress">
+                                <span class="angular"></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="progress-bar">
+                        <p class="progress-title">
+                            D3.js
+                        </p>
+                        <div class="progress-container">
+                            <p class="progress-text">60%</p>
+                            <div class="progress">
+                                <span class="d3"></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="progress-bar">
+                        <p class="progress-title">
+                            Javascript
+                        </p>
+                        <div class="progress-container">
+                            <p class="progress-text">80%</p>
+                            <div class="progress">
+                                <span class="js"></span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <h4 class="stat-title">
+                My Timeline
+            </h4>
+            <div class="timeline">
+                <div class="timeline-item">
+                    <div class="timeline-icon">
+                        <i class="fas fa-briefcase"></i>
+                    </div>
+                    <p class="timeline-duration">
+                        Jan, 2021 - Present
+                    </p>
+                    <h5>Systems Engineer - <span> Tata Consultancy Services </span></h5>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo temporibus quia eius quasi non facere facilis amet quibusdam cum in. Reprehenderit veniam incidunt voluptatem ipsa ea unde esse doloribus omnis.
+                    </p>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-icon">
+                        <i class="fas fa-briefcase"></i>
+                    </div>
+                    <p class="timeline-duration">
+                        Jun, 2018 - Dec, 2020
+                    </p>
+                    <h5>Senior Software Engineer - <span> Capgemini </span></h5>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo temporibus quia eius quasi non facere facilis amet quibusdam cum in. Reprehenderit veniam incidunt voluptatem ipsa ea unde esse doloribus omnis.
+                    </p>
+                </div>
+            </div>
+        </section>
         <section class="section sec3 portfolio" id="portfolio"></section>
         <section class="section sec4 blogs" id="blogs"></section>
         <section class="section sec5 contact" id="contact"></section>
