added contact section

--- a/index.html
+++ b/index.html
@@ -151,9 +151,81 @@
                 </div>
             </div>
         </section>
-        <section class="section sec3 portfolio" id="portfolio"></section>
-        <section class="section sec4 blogs" id="blogs"></section>
-        <section class="section sec5 contact" id="contact"></section>
+        <!-- <section class="section sec3 portfolio" id="portfolio">
+            <div class="main-title">
+                <h2>My <span>Portfolio</span><span class="bg-text">my work</span></h2>
+            </div>
+        </section>
+        <section class="section sec4 blogs" id="blogs"></section> -->
+        <section class="section sec5 contact" id="contact">
+            <div class="contact-container">
+                <div class="main-title">
+                    <h2>Contact <span>Me</span><span class="bg-text">my work</span></h2>
+                </div>
+                <div class="contact-content-container">
+                    <div class="left-contact">
+                        <h4>Contact me here</h4>
+                        <div class="contact-info">
+                            <div class="contact-item">
+                                <div class="icon">
+                                    <i class="fas fa-map-marker-alt"></i>
+                                    <span>Location: Jodhpur, Rajasthan, India</span>
+                                </div>
+                            </div>
+                            <div class="contact-item">
+                                <div class="icon">
+                                    <i class="fas fa-envelope"></i>
+                                    <span>Email: pparihar149@gmail.com</span>
+                                </div>
+                            </div>
+                            <div class="contact-item">
+                                <div class="icon">
+                                    <i class="fas fa-phone"></i>
+                                    <span>Mobile: +91-8769873089</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="contact-icons">
+                            <div class="contact-icon">
+                                <a href="#" target="blank">
+                                    <i class="fab fa-facebook-f"></i>
+                                </a>
+                            </div>
+                            <div class="contact-icon">
+                                <a href="#" target="blank">
+                                    <i class="fab fa-github"></i>
+                                </a>
+                            </div>
+                            <div class="contact-icon">
+                                <a href="#" target="blank">
+                                    <i class="fab fa-linkedin"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="right-contact">
+                        <form action="" class="contact-form">
+                            <div class="input-control basic-info">
+                                <input type="text" required placeholder="Your name">
+                                <input type="email" required placeholder="Your email">
+                            </div>
+                            <div class="input-control">
+                                <input type="text" required placeholder="Enter subject">
+                            </div>
+                            <div class="input-control">
+                                <textarea cols="15" rows="8" placeholder="Message here..."></textarea>
+                            </div>
+                            <div class="submit-btn btn-container">
+                                <a href="" class="main-btn">
+                                    <span class="btn-text">Submit</span>
+                                    <span class="btn-icon"><i class="fas fa-paper-plane"></i></span>
+                                </a>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <div class="controls">
@@ -163,12 +235,12 @@
         <div class="control control-2" data-id="about">
             <i class="fas fa-user"></i>
         </div>
-        <div class="control control-3" data-id="portfolio">
+        <!-- <div class="control control-3" data-id="portfolio">
             <i class="fas fa-briefcase"></i>
         </div>
         <div class="control control-4" data-id="blogs">
             <i class="fas fa-newspaper"></i>
-        </div>
+        </div> -->
         <div class="control control-5" data-id="contact">
             <i class="fas fa-envelope-open"></i>
         </div>
